<resources>
    <string name="app_name">任务Clock</string>
    <string name="title_home">主页</string>
    <string name="title_appList">应用列表</string>
    <string name="title_setting">闹铃设置</string>
    <string name="app_list">选择需要制定任务的APP</string>

    <string name="dummy_content">任务Clock</string>
    <string name="FormulateActivityTitle">任务制定</string>

    <string name="period">选择周期</string>
    <string name="week_one">周一</string>
    <string name="week_two">周二</string>
    <string name="week_three">周三</string>
    <string name="week_four">周四</string>
    <string name="week_five">周五</string>
    <string name="week_six">周六</string>
    <string name="week_seven">周日</string>
    <string-array name="period_kind">
        <item>每天</item>
        <item>按周</item>
        <item>按月</item>
        <item>其他</item>
    </string-array>
</resources>
