<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/safe_distance"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/safe_distance"
    android:paddingEnd="@dimen/safe_distance">

    <RelativeLayout
        android:id="@+id/rl_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/calendar_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="#ff111111"
            android:textSize="17sp" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/calendar_top"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:id="@+id/calendar_row_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_one"
                android:textColor="#ff111111"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_two"
                android:textColor="#ff111111"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_three"
                android:textColor="#ff111111"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_four"
                android:textColor="#ff111111"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_five"
                android:textColor="#ff111111"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_six"
                android:textColor="#ff111111"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_seven"
                android:textColor="#ff111111"
                android:textSize="15sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/period_monthly_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calendar_row_top"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </RelativeLayout>
</LinearLayout>